--- a/templates/early-life.html
+++ b/templates/early-life.html
@@ -250,7 +250,7 @@
       <h2>Chat with Van Gogh</h2>
       <div class="chatbox" id="chatbox">
         <div class="chat-bubble">
-          <img src="van-gogh-avatar.jpg" alt="Van Gogh Avatar">
+          <img src="static\van-gogh-avatar.jpg" alt="Van Gogh Avatar">
           <p>Ohh this is a tough question! Should I give you a hint?</p>
         </div>
         <div class="chat-bubble user-message">
