--- a/templates/startscreen.html
+++ b/templates/startscreen.html
@@ -103,7 +103,7 @@
   <div class="container">
     <!-- Early Life Card -->
     <a href="early-life.html" class="card red">
-      <img src="early-life.png" alt="Early life">
+      <img src="static\early-life.png" alt="Early life">
       <h3>Early life</h3>
       <div class="progress-bar">
         <div class="progress" style="width: 30%;"></div>
@@ -121,7 +121,7 @@
 
     <!-- Last Year Card -->
     <div class="card blue">
-      <img src="last-year.jpg" alt="Last year">
+      <img src="static\last-year.jpg" alt="Last year">
       <h3>Last year</h3>
       <div class="lock-icon">🔒</div>
     </div>
