--- a/templates/early-life.html
+++ b/templates/early-life.html
@@ -249,12 +249,9 @@
     <div class="panel">
       <h2>Chat with Van Gogh</h2>
       <div class="chatbox" id="chatbox" style="max-height: 400px; overflow-y: auto;">
-        <div class="chat-bubble">
+        <div class="chat-bubble vincent-message">
           <img src="static/van-gogh-avatar.jpg" alt="Van Gogh Avatar">
-          <p>Ohh this is a tough question! Should I give you a hint?</p>
-        </div>
-        <div class="chat-bubble user-message">
-          <p>Yes please!</p>
+          <p>Hello! Ask me anything about my early life.</p>
         </div>
       </div>
       <div class="chat-input-container">
